fix close button placement for iframe (scrollbars), increase width of iframe in landscape, add box-shadow to all dialogs

--- a/helium/src/scss/_base.scss
+++ b/helium/src/scss/_base.scss
@@ -78,34 +78,51 @@ iframe.dialog {
   border: 5px solid green;
 }
 
-#yc-root.dialog-active {
-  #veil {
-    display: block;
-    z-index: $VEIL_CONTENT_Z_INDEX;
+#yc-root {
+  // common to dialog and iframe
+  &.dialog-active, &.popup-active {
+    #veil {
+      display: block;
+      z-index: $VEIL_Z_INDEX;
+    }
+    #yc-dialog {
+      box-shadow: 8px 12px 16px 5px rgba(30, 30, 30, 0.6);
+    }
   }
-  #yc-dialog {
-    display: block;
-  }
-}
 
-#yc-root.popup-active {
-  #veil {
-    display: block;
-    z-index: $VEIL_CONTENT_Z_INDEX;
+  // dialog only
+  &.dialog-active {
+    #yc-dialog {
+      display: block;
+    }
+    #yc-iframe-popup {
+      display: none;
+    }
   }
-  #yc-dialog {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0;
-    height: 70vh;
-  }
-  #dialog-inner {
-    display: none;
-  }
-  #yc-iframe-popup {
-    flex-grow: 1;
-    align-self: stretch;
+
+  // popup iframe only
+  &.popup-active {
+    #yc-dialog {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 0;
+      height: 70vh;
+      @include respond_to(tablet_landscape) {
+        width: $MAX_CONTENT_WIDTH;
+      }
+    }
+    #dialog-close {
+      top: 7px;
+      right: 22px;
+    }
+    #dialog-inner {
+      display: none;
+    }
+    #yc-iframe-popup {
+      flex-grow: 1;
+      align-self: stretch;
+    }
   }
 }
 
